# mirrorcowork

./: main.py  pyproject.toml
src/mirrorcowork/: __init__.py  cli.py
src/mirrorcowork/bridge/: __init__.py  mirrorbrain.py
src/mirrorcowork/events/: __init__.py  watcher.py
src/mirrorcowork/mcp/: __init__.py  hypervisor.py
src/mirrorcowork/router/: __init__.py  reflection.py  sovereign.py
src/mirrorcowork/sovereignty/: __init__.py  conscience.py  crystallization.py  temporal.py
src/mirrorcowork/state/: __init__.py  task.py
tests/: __init__.py  test_mcp_hypervisor.py  test_reflection_router.py
