[project]
name = "mirrorcowork"
version = "0.1.0"
description = "Sovereign agentic governance layer for multi-agent orchestration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "watchdog>=4.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
mirrorcowork = "mirrorcowork.cli:app"
mw = "mirrorcowork.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mirrorcowork"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
